# iced-sudoku

./: .gitignore  Cargo.toml  build_wasm.bat
src/: main.rs  save.rs  style.rs  sudoku.rs  sudoku_view.rs
wasm/: index.html
